Fixed scrollbar position.

--- a/demo/main.css
+++ b/demo/main.css
@@ -78,7 +78,7 @@ div.background img {
   position: absolute;
   z-index: 100;
   height: 90%;
-  width: 85%;
+  width: 90%;
   overflow-y:auto;
 }
 
